--- a/BreastCancer.ipynb
+++ b/BreastCancer.ipynb
@@ -6,10 +6,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 73
+          "height": 74
         },
         "id": "FjZSW2YbhdBW",
-        "outputId": "5fc53acc-7958-4a64-946e-c31c7769123e"
+        "outputId": "30b0b631-7604-4887-cd3c-21092e3e97c1"
       },
       "outputs": [
         {
@@ -20,9 +20,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-77a8a42d-6801-4084-a7d4-0fd9776a55af\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-e40d9858-36bb-4361-a70f-978ceb67107f\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-77a8a42d-6801-4084-a7d4-0fd9776a55af\">\n",
+              "     <output id=\"result-e40d9858-36bb-4361-a70f-978ceb67107f\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -232,49 +232,50 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dMB_EZqquw-5",
-        "outputId": "9c7a367a-8aa0-4d72-a0e6-35bb728ab4fe"
+        "outputId": "2acae4eb-17c0-4226-8f5a-207bd39c432c"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "ref                                                        title                                           size  lastUpdated          downloadCount  voteCount  usabilityRating  \n",
-            "---------------------------------------------------------  ---------------------------------------------  -----  -------------------  -------------  ---------  ---------------  \n",
-            "salvatorerastelli/spotify-and-youtube                      Spotify and Youtube                              9MB  2023-03-20 15:43:25           6174        236  1.0              \n",
-            "erdemtaha/cancer-data                                      Cancer Data                                     49KB  2023-03-22 07:57:00           2002         48  1.0              \n",
-            "ulrikthygepedersen/fastfood-nutrition                      Fastfood Nutrition                              12KB  2023-03-21 10:02:41           2172         45  1.0              \n",
-            "lokeshparab/amazon-products-dataset                        Amazon Products Sales Dataset 2023              80MB  2023-03-26 10:45:19           2376         54  1.0              \n",
-            "rkiattisak/student-performance-in-mathematics              Student performance prediction                   9KB  2023-03-12 04:32:56           7315        153  1.0              \n",
-            "abhishekrp1517/online-retail-transactions-dataset          Online Retail transactions Dataset              29MB  2023-03-28 16:53:16           1035         39  0.9411765        \n",
-            "ashishraut64/global-methane-emissions                      Global Emissions.                               31KB  2023-03-27 09:02:51           2174         48  1.0              \n",
-            "ashishraut64/internet-users                                Global Internet users                          163KB  2023-03-29 12:25:13           1416         44  1.0              \n",
-            "arnabchaki/popular-video-games-1980-2023                   Popular Video Games 1980 - 2023 🎮                1MB  2023-03-23 16:16:51           3135         91  1.0              \n",
-            "dgoenrique/netflix-movies-and-tv-shows                     Netflix Movies and TV Shows                      2MB  2023-03-13 18:49:00           3370         85  1.0              \n",
-            "priyanshuganwani09/entertainment-movies-tv-shows-database  Entertainment (movies, tv shows) Dataset        47KB  2023-04-02 17:52:36            792         28  1.0              \n",
-            "muhammedzidan/car-prices-market                            Car Prices Market                              787KB  2023-04-01 10:07:17           1206         34  1.0              \n",
-            "dgoenrique/amazon-prime-movies-and-tv-shows                Amazon Prime Movies and TV Shows                 4MB  2023-03-13 18:50:21           1127         31  1.0              \n",
-            "edomingo/chatgpt-1000-daily-tweets                         #ChatGPT 1000 Daily 🐦 Tweets                     3MB  2023-04-12 22:40:16            367         31  1.0              \n",
-            "lamiatabassum/top-50-us-tech-companies-2022-2023-dataset   USA Tech Companies Stats                         2KB  2023-03-25 06:06:20           1439         40  1.0              \n",
-            "nidzsharma/us-mass-shootings-19822023                      Gun Violence, USA                               31KB  2023-03-28 06:32:25            754         27  0.9411765        \n",
-            "usamabuttar/world-happiness-report-2005-present            World Happiness Report, 2005-Present           123KB  2023-03-25 17:38:26           1737         43  1.0              \n",
-            "ivnlee/solar-energy-production                             Solar Energy Production                          3MB  2023-03-30 01:50:29            431         26  1.0              \n",
-            "mehmettahiraslan/customer-shopping-dataset                 Customer Shopping Dataset - Retail Sales Data    2MB  2023-03-09 07:44:35           4556         88  1.0              \n",
-            "rajkumarpandey02/list-of-unicorn-startup-companies         List of Unicorn Startup Companies               15KB  2023-03-27 10:19:49            525         35  1.0              \n"
+            "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /root/.kaggle/kaggle.json'\n",
+            "ref                                                         title                                         size  lastUpdated          downloadCount  voteCount  usabilityRating  \n",
+            "----------------------------------------------------------  -------------------------------------------  -----  -------------------  -------------  ---------  ---------------  \n",
+            "arnabchaki/data-science-salaries-2023                       Data Science Salaries 2023  💸                 25KB  2023-04-13 09:55:16           5610        138  1.0              \n",
+            "salvatorerastelli/spotify-and-youtube                       Spotify and Youtube                            9MB  2023-03-20 15:43:25          11376        399  1.0              \n",
+            "iammustafatz/diabetes-prediction-dataset                    Diabetes prediction dataset                  734KB  2023-04-08 06:11:45           2869         50  1.0              \n",
+            "shawkyelgendy/furniture-price-prediction                    Furniture Price Prediction                    81KB  2023-04-17 09:35:17            940         26  1.0              \n",
+            "arnabchaki/indian-restaurants-2023                          Indian Restaurants 2023 🍲                    139KB  2023-04-27 09:57:57            541         22  1.0              \n",
+            "kapturovalexander/ferrari-and-tesla-share-prices-2015-2023  Ferrari and Tesla. Share prices (2015-2023)   82KB  2023-04-23 04:33:59            579         29  1.0              \n",
+            "desalegngeb/students-exam-scores                            Students Exam Scores: Extended Dataset       695KB  2023-04-14 00:15:38           2092         55  1.0              \n",
+            "erdemtaha/cancer-data                                       Cancer Data                                   49KB  2023-03-22 07:57:00           5828        116  1.0              \n",
+            "lokeshparab/amazon-products-dataset                         Amazon Products Sales Dataset 2023            80MB  2023-03-26 10:45:19           6036        129  1.0              \n",
+            "cuecacuela/england-football-matches                         England Football Matches                     389KB  2023-04-25 16:08:27            461         25  1.0              \n",
+            "matarrgaye/uk-consumer-trends-current-price                 UK Consumer Trends: 1997 - 2022, Quarterly   293KB  2023-04-26 14:49:10            417         21  0.88235295       \n",
+            "harshsingh2209/supply-chain-analysis                        Supply Chain Analysis                          9KB  2023-04-22 23:32:27            412         23  1.0              \n",
+            "ulrikthygepedersen/fastfood-nutrition                       Fastfood Nutrition                            12KB  2023-03-21 10:02:41           4768         90  1.0              \n",
+            "priyanshusethi/minecraft-piracy-dataset                     Minecraft Piracy Dataset                      30KB  2023-04-20 14:14:10            324         31  1.0              \n",
+            "ppb00x/credit-risk-customers                                credit_risk_customers                         18KB  2023-04-12 08:28:28           1982         48  1.0              \n",
+            "evangower/premier-league-2022-2023                          Premier League 2022-2023                       7KB  2023-04-14 19:45:22           1544         38  1.0              \n",
+            "arnabchaki/popular-video-games-1980-2023                    Popular Video Games 1980 - 2023 🎮              1MB  2023-03-23 16:16:51           4955        133  1.0              \n",
+            "dansbecker/melbourne-housing-snapshot                       Melbourne Housing Snapshot                   451KB  2018-06-05 12:52:24         114043       1252  0.7058824        \n",
+            "shubhammeshram579/house                                     Housing price prediction                      12KB  2023-04-19 09:37:25           1069         34  1.0              \n",
+            "r1chardson/the-world-university-rankings-2011-2023          THE World University Rankings 2011-2023        1MB  2023-04-03 12:43:37           2975         65  1.0              \n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "qwWJE-1N8dFP",
-        "outputId": "e94d6547-2a7d-4cac-8ee6-aa612577debc"
+        "outputId": "07b58d74-09a8-4be5-8b73-3467ae572251"
       },
       "outputs": [
         {
@@ -282,8 +283,8 @@
           "name": "stdout",
           "text": [
             "Downloading breast-histopathology-images.zip to /content\n",
-            "100% 3.08G/3.10G [00:27<00:00, 224MB/s]\n",
-            "100% 3.10G/3.10G [00:27<00:00, 120MB/s]\n"
+            "100% 3.10G/3.10G [01:34<00:00, 42.5MB/s]\n",
+            "100% 3.10G/3.10G [01:34<00:00, 35.2MB/s]\n"
           ]
         }
       ],
@@ -294,20 +295,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "NEkZphHG62e0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "22042913-e7d5-420e-fd10-9367749bc145"
+        "outputId": "9de50f92-7106-4e61-c82b-8598cd031195"
       },
       "outputs": [
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[1;30;43mStreaming output truncated to the last 5000 lines.\u001b[0m\n",
+            "  inflating: IDC_regular_ps50_idx5/9346/0/9346_idx5_x2351_y1551_class0.png  \n",
             "  inflating: IDC_regular_ps50_idx5/9346/0/9346_idx5_x2351_y1601_class0.png  \n",
             "  inflating: IDC_regular_ps50_idx5/9346/0/9346_idx5_x2351_y1651_class0.png  \n",
             "  inflating: IDC_regular_ps50_idx5/9346/0/9346_idx5_x2351_y1701_class0.png  \n",
@@ -5306,8 +5311,7 @@
             "  inflating: IDC_regular_ps50_idx5/9383/1/9383_idx5_x2051_y951_class1.png  \n",
             "  inflating: IDC_regular_ps50_idx5/9383/1/9383_idx5_x2101_y1001_class1.png  \n",
             "  inflating: IDC_regular_ps50_idx5/9383/1/9383_idx5_x2101_y901_class1.png  \n",
-            "  inflating: IDC_regular_ps50_idx5/9383/1/9383_idx5_x2101_y951_class1.png  \n",
-            "Mounted at /content/drive\n"
+            "  inflating: IDC_regular_ps50_idx5/9383/1/9383_idx5_x2101_y951_class1.png  \n"
           ]
         }
       ],
@@ -5324,6 +5328,104 @@
       ],
       "metadata": {
         "id": "rzXk0h_j0NJz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "imagePatches = glob('/IDC_regular_ps50_idx5/**/*.png', recursive=True)"
+      ],
+      "metadata": {
+        "id": "9-8kETOczae-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class0 = [] # 0 = no cancer\n",
+        "class1 = [] # 1 = cancer\n",
+        "\n",
+        "for filename in imagePatches:\n",
+        "    if filename.endswith(\"class0.png\"):\n",
+        "         class0.append(filename)\n",
+        "    else:\n",
+        "        class1.append(filename)"
+      ],
+      "metadata": {
+        "id": "Y5g57FUt1umu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sampled_class0 = random.sample(class0, 78786)\n",
+        "sampled_class1 = random.sample(class1, 78786)\n",
+        "\n",
+        "from matplotlib.image import imread\n",
+        "import cv2\n",
+        "\n",
+        "def get_image_arrays(data, label):\n",
+        "    img_arrays = []\n",
+        "    for i in data:\n",
+        "        if i.endswith('.png'):\n",
+        "            img = cv2.imread(i ,cv2.IMREAD_COLOR)\n",
+        "            img_sized = cv2.resize(img, (img_size,img_size), interpolation=cv2.INTER_LINEAR)\n",
+        "            img_arrays.append([img_sized, label])\n",
+        "    return img_arrays\n",
+        "class0_array = get_image_arrays(sampled_class0, 0)\n",
+        "class1_array = get_image_arrays(sampled_class1, 1)"
+      ],
+      "metadata": {
+        "id": "-vMf8hvg13FQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "combined_data = np.concatenate((class0_array, class1_array))\n",
+        "random.seed(41)\n",
+        "random.shuffle(combined_data)"
+      ],
+      "metadata": {
+        "id": "fcI6Re-g22ax"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = []\n",
+        "y = []\n",
+        "\n",
+        "for features,label in combined_data:\n",
+        "    X.append(features)\n",
+        "    y.append(label)\n",
+        "X = np.array(X).reshape(-1, img_size, img_size, 3)"
+      ],
+      "metadata": {
+        "id": "3sY-IFBX25Gd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42)\n",
+        "y_train = to_categorical(y_train)\n",
+        "y_test = to_categorical(y_test)"
+      ],
+      "metadata": {
+        "id": "J0HsYg3N2_kl"
       },
       "execution_count": null,
       "outputs": []
