fixed root model and saved models to pickle files

--- a/lung_model.ipynb
+++ b/lung_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "4ae34006",
    "metadata": {
     "scrolled": true,
@@ -15,7 +15,7 @@
        "<module 'data' from '/Users/tyler1/cmsc472/cmsc472_medicaldiagnosis/data.py'>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,6 +24,7 @@
     "import importlib\n",
     "import pydicom as dicom\n",
     "\n",
+    "import pickle\n",
     "import data\n",
     "import torch\n",
     "import torchvision.transforms as transforms\n",
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "961afe8d",
    "metadata": {
     "tags": []
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "7a66753a",
    "metadata": {
     "tags": []
@@ -71,7 +72,7 @@
        "        [199., 199., 198.,  ..., 198., 199., 199.]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "f404d0c2",
    "metadata": {
     "tags": []
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "56c68852",
    "metadata": {
     "tags": []
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "6814353b",
    "metadata": {
     "tags": []
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "5d627129",
    "metadata": {
     "tags": []
@@ -173,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "88f9bc4a",
    "metadata": {
     "tags": []
@@ -183,56 +184,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch : 0, Train loss: 36.21159 , Train Acc: 0.8333, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 1, Train loss: 47.50000 , Train Acc: 0.5000, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 2, Train loss: 45.41667 , Train Acc: 0.6667, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 3, Train loss: 43.33333 , Train Acc: 0.8333, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 4, Train loss: 47.50000 , Train Acc: 0.5000, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 5, Train loss: 45.41667 , Train Acc: 0.6667, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 6, Train loss: 49.58333 , Train Acc: 0.3333, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 7, Train loss: 49.58333 , Train Acc: 0.3333, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 8, Train loss: 47.50000 , Train Acc: 0.5000, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 9, Train loss: 49.58333 , Train Acc: 0.3333, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 10, Train loss: 51.66667 , Train Acc: 0.1667, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 11, Train loss: 41.25000 , Train Acc: 1.0000, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 12, Train loss: 47.50000 , Train Acc: 0.5000, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 13, Train loss: 49.58333 , Train Acc: 0.3333, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 14, Train loss: 49.58333 , Train Acc: 0.3333, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 15, Train loss: 47.50000 , Train Acc: 0.5000, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 16, Train loss: 49.58333 , Train Acc: 0.3333, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 17, Train loss: 47.50000 , Train Acc: 0.5000, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 18, Train loss: 45.41667 , Train Acc: 0.6667, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 19, Train loss: 49.58333 , Train Acc: 0.3333, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 20, Train loss: 47.50000 , Train Acc: 0.5000, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 21, Train loss: 49.58333 , Train Acc: 0.3333, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 22, Train loss: 45.41667 , Train Acc: 0.6667, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 23, Train loss: 45.41667 , Train Acc: 0.6667, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 24, Train loss: 51.66667 , Train Acc: 0.1667, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 25, Train loss: 43.33333 , Train Acc: 0.8333, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 26, Train loss: 49.58333 , Train Acc: 0.3333, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 27, Train loss: 51.66667 , Train Acc: 0.1667, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 28, Train loss: 49.58333 , Train Acc: 0.3333, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 29, Train loss: 49.58333 , Train Acc: 0.3333, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 30, Train loss: 47.50000 , Train Acc: 0.5000, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 31, Train loss: 49.58333 , Train Acc: 0.3333, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 32, Train loss: 47.50000 , Train Acc: 0.5000, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 33, Train loss: 45.41667 , Train Acc: 0.6667, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 34, Train loss: 45.41667 , Train Acc: 0.6667, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 35, Train loss: 47.50000 , Train Acc: 0.5000, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 36, Train loss: 45.41667 , Train Acc: 0.6667, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 37, Train loss: 47.50000 , Train Acc: 0.5000, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 38, Train loss: 43.33333 , Train Acc: 0.8333, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 39, Train loss: 43.33333 , Train Acc: 0.8333, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 40, Train loss: 45.41667 , Train Acc: 0.6667, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 41, Train loss: 49.58333 , Train Acc: 0.3333, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 42, Train loss: 45.41667 , Train Acc: 0.6667, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 43, Train loss: 47.50000 , Train Acc: 0.5000, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 44, Train loss: 49.58333 , Train Acc: 0.3333, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 45, Train loss: 43.33333 , Train Acc: 0.8333, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 46, Train loss: 47.50000 , Train Acc: 0.5000, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 47, Train loss: 47.50000 , Train Acc: 0.5000, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 48, Train loss: 47.50000 , Train Acc: 0.5000, Val loss: 55.00000, Val acc: 0.4500\n",
-      "Epoch : 49, Train loss: 47.50000 , Train Acc: 0.5000, Val loss: 55.00000, Val acc: 0.4500\n"
+      "Epoch : 0, Train loss: 44.93539 , Train Acc: 0.3333, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 1, Train loss: 54.58333 , Train Acc: 0.3333, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 2, Train loss: 54.58333 , Train Acc: 0.3333, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 3, Train loss: 48.33333 , Train Acc: 0.8333, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 4, Train loss: 56.66667 , Train Acc: 0.1667, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 5, Train loss: 50.41667 , Train Acc: 0.6667, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 6, Train loss: 52.50000 , Train Acc: 0.5000, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 7, Train loss: 54.58333 , Train Acc: 0.3333, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 8, Train loss: 56.66667 , Train Acc: 0.1667, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 9, Train loss: 54.58333 , Train Acc: 0.3333, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 10, Train loss: 50.41667 , Train Acc: 0.6667, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 11, Train loss: 48.33333 , Train Acc: 0.8333, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 12, Train loss: 54.58333 , Train Acc: 0.3333, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 13, Train loss: 50.41667 , Train Acc: 0.6667, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 14, Train loss: 48.33333 , Train Acc: 0.8333, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 15, Train loss: 56.66667 , Train Acc: 0.1667, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 16, Train loss: 50.41667 , Train Acc: 0.6667, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 17, Train loss: 50.41667 , Train Acc: 0.6667, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 18, Train loss: 50.41667 , Train Acc: 0.6667, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 19, Train loss: 52.50000 , Train Acc: 0.5000, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 20, Train loss: 52.50000 , Train Acc: 0.5000, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 21, Train loss: 56.66667 , Train Acc: 0.1667, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 22, Train loss: 54.58333 , Train Acc: 0.3333, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 23, Train loss: 54.58333 , Train Acc: 0.3333, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 24, Train loss: 52.50000 , Train Acc: 0.5000, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 25, Train loss: 54.58333 , Train Acc: 0.3333, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 26, Train loss: 50.41667 , Train Acc: 0.6667, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 27, Train loss: 50.41667 , Train Acc: 0.6667, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 28, Train loss: 48.33333 , Train Acc: 0.8333, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 29, Train loss: 48.33333 , Train Acc: 0.8333, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 30, Train loss: 50.41667 , Train Acc: 0.6667, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 31, Train loss: 52.50000 , Train Acc: 0.5000, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 32, Train loss: 52.50000 , Train Acc: 0.5000, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 33, Train loss: 48.33333 , Train Acc: 0.8333, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 34, Train loss: 52.50000 , Train Acc: 0.5000, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 35, Train loss: 54.58333 , Train Acc: 0.3333, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 36, Train loss: 52.50000 , Train Acc: 0.5000, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 37, Train loss: 54.58333 , Train Acc: 0.3333, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 38, Train loss: 52.50000 , Train Acc: 0.5000, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 39, Train loss: 52.50000 , Train Acc: 0.5000, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 40, Train loss: 48.33333 , Train Acc: 0.8333, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 41, Train loss: 50.41667 , Train Acc: 0.6667, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 42, Train loss: 50.41667 , Train Acc: 0.6667, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 43, Train loss: 48.33333 , Train Acc: 0.8333, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 44, Train loss: 50.41667 , Train Acc: 0.6667, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 45, Train loss: 52.50000 , Train Acc: 0.5000, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 46, Train loss: 54.58333 , Train Acc: 0.3333, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 47, Train loss: 54.58333 , Train Acc: 0.3333, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 48, Train loss: 50.41667 , Train Acc: 0.6667, Val loss: 45.00000, Val acc: 0.5500\n",
+      "Epoch : 49, Train loss: 56.66667 , Train Acc: 0.1667, Val loss: 45.00000, Val acc: 0.5500\n"
      ]
     }
    ],
@@ -298,6 +299,19 @@
     "        print(\"Epoch : {}, Train loss: {:.5f} , Train Acc: {:.4f}, Val loss: {:.5f}, Val acc: {:.4f}\".format(epoch, np.mean(train_loss), np.mean(train_acc), np.mean(val_loss), np.mean(val_acc)))\n",
     "        \n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f4533a0e-0463-4fb4-8959-d728888fa7f9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "with open(f'./trained_models/meta_lung.pkl', 'wb') as f:\n",
+    "    pickle.dump(model, f)"
    ]
   },
   {
